# 22s-SearchEngine

./: .gitignore  AVLTree.h  AVLTreeTests.cpp  Article.cpp  Article.h  CMakeLists.txt  DocumentParser.cpp  DocumentParser.h  HashTable.h  IndexHandler.cpp  IndexHandler.h  QueryProcessor.cpp  QueryProcessor.h  SearchEngine.cpp  SearchEngine.h  Word.cpp  Word.h  main.cpp
